--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Messenger"
         tools:targetApi="31">
         <activity
+            android:name=".mainpage.MainPageActivity"
+            android:exported="false" />
+        <activity
             android:name=".signup.SignUpActivity"
             android:exported="false" />
         <activity
